@@ -8,14 +8,8 @@
 
 __all__ = ('IRField', 'IRNullType', 'irNull', 'IRPickleField')
 
-from .compat_str import tostr
+from ..compat_str import tostr
 
-try:
-	import cPickle as pickle
-except ImportError:
-	import pickle
-
-from base64 import b64encode, b64decode
 
 try:
 	unicode
@@ -69,29 +63,6 @@ class IRField(str):
 
 
 
-class IRPickleField(IRField):
-	'''
-		IRPickleField - A field which pickles its data before storage and loads after retrieval
-	'''
-
-	def __init__(self, val, valueType=None):
-		if valueType is not None:
-			raise ValueError('IRPickleField with any valueType other than None is invalid.')
-		self.valueType = None
-
-	def toStorage(self, value):
-		if value in ('', irNull):
-			return value
-		if type(value) == str:
-			return value
-		return b64encode(pickle.dumps(value)).decode('ascii')
-
-	def convert(self, value):
-		if not value:
-			return value
-		if hasattr(value, 'encode'):
-			value = value.encode('ascii')
-		return pickle.loads(b64decode(value))
 
 
 class IRNullType(str):
@@ -125,5 +96,7 @@ class IRNullType(str):
 global irNull
 irNull = IRNullType()
 
+from .compressed import IRCompressedField
+from .pickle import IRPickleField
 
 # vim:set ts=8 shiftwidth=8 softtabstop=8 noexpandtab :
